--- a/templates/mongod.conf.erb
+++ b/templates/mongod.conf.erb
@@ -20,8 +20,8 @@ systemLog:
 
 # network interfaces
 net:
-  port: 27017
-  bindIp: 0.0.0.0
+  port: <%= @proxy_port %>
+  bindIp: <%= @ip_traffic %>
 
 
 #processManagement:
